base/infra/guacamole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: infra
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/part-of: homelab
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
spec:
  ingressClassName: traefik
  rules:
    - host: guac.sunnyside.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 80
  tls:
    - hosts:
        - guac.sunnyside.home
      secretName: guacamole-tls
